--- a/data/prepare_wiki_dataset.ipynb
+++ b/data/prepare_wiki_dataset.ipynb
@@ -17,7 +17,7 @@
     "    </ol>\n",
     "  <li>Process them with corenlp;</li>\n",
     "    <ol>\n",
-    "      <li>Run the container: <code>docker run --rm -ti -p 9000:9000 -d tchewik/corenlp</code>;</li>\n",
+    "      <li>Run the container: <code>docker run --restart=unless-stopped -ti -p 9000:9000 -d tchewik/corenlp</code>;</li>\n",
     "      <li>Process the collected file;</li>\n",
     "      <li>Save the result into chunks;</li>\n",
     "      <li>(Optional) filter the triplets by named entities occurrence.</li>\n",
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/categories.filter', 'w') as f:\n",
+    "with open('categories.filter', 'w') as f:\n",
     "    categories.sort()\n",
     "    for category in categories:\n",
     "        f.write(category + '\\n')"
@@ -138,18 +138,14 @@
     "python wikiextractor/WikiExtractor.py $1 \\\n",
     "       --json \\\n",
     "       --processes 2 \\\n",
-    "       --output extracted_2782 \\\n",
+    "       --output extracted \\\n",
     "       --bytes 1M \\\n",
     "       --compress \\\n",
     "       --filter_category categories.filter \\\n",
-    "       --links \\\n",
-    "       --sections \\\n",
-    "       --lists \\\n",
-    "       --keep_tables \\\n",
     "       --min_text_length 0 \\\n",
     "       --filter_disambig_pages\n",
     "       \n",
-    "find extracted_2782 -name '*bz2' -exec bzip2 -dkc {} \\; > it_wiki_articles"
+    "find extracted -name '*bz2' -exec bzip2 -dkc {} \\; > it_wiki_articles"
    ]
   },
   {
@@ -170,82 +166,7 @@
     "            if i < len(file) - 1:\n",
     "                fo.write(line[:-1] + ',')\n",
     "            else:\n",
-    "                fo.write(line + ']')\n",
-    "                \n",
-    "file = json.load(open('it_wiki_articles.json', 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Filter titles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = []\n",
-    "\n",
-    "for line in file:\n",
-    "    flag = False\n",
-    "    for word in stopwords:\n",
-    "        if word in line['title'].lower():\n",
-    "            flag = True\n",
-    "            continue\n",
-    "    if not flag:\n",
-    "        result.append(line)\n",
-    "        \n",
-    "print(len(result), 'articles were loaded.')\n",
-    "json.dump(result, open('it_wiki_articles.json', 'w'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del file, result\n",
-    "! rm -r wikiextractor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Process the articles using corenlp "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "pip install -U pip\n",
-    "pip install pycorenlp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pycorenlp import StanfordCoreNLP\n",
-    "\n",
-    "container = # '0.0.0.0:9000'\n",
-    "nlp = StanfordCoreNLP(container)\n",
-    "nlp_properties = {\n",
-    "  'annotators': 'tokenize,ssplit,tokenize,ssplit,pos,depparse,natlog,openie,ner',\n",
-    "  'outputFormat': 'json'\n",
-    "}"
+    "                fo.write(line + ']')"
    ]
   },
   {
@@ -285,14 +206,14 @@
     "    data = s.get_data().replace('\\n\\n', '\\n')\\\n",
     "                        .replace('Section::::', '')\\\n",
     "                        .replace('BULLET::::', '')\\\n",
-    "                        .replace('(Archive)', '')\n",
+    "                        .replace('(Archive)', '')\\\n",
+    "                        .replace('( )', '')\n",
     "    data = re.sub(r'style=\".*\"', '', data)\n",
-    "    return data\n",
+    "    return data.strip()\n",
     "\n",
     "file.text = file.text.map(strip_tags)\n",
-    "file = file[file.text.map(len) < 60000]\n",
-    "file.to_json('it_wiki_articles.json', orient='values')\n",
-    "del file"
+    "#file = file[file.text.map(len) < 60000]\n",
+    "file.to_json('it_wiki_articles.json', orient='values')"
    ]
   },
   {
@@ -301,28 +222,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file = file[file.text.map(len) < 84000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Filter titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "\n",
+    "for line in file:\n",
+    "    flag = False\n",
+    "    for word in stopwords:\n",
+    "        if word in line['title'].lower():\n",
+    "            flag = True\n",
+    "            continue\n",
+    "    if not flag:\n",
+    "        result.append(line)\n",
+    "        \n",
+    "print(len(result), 'articles were loaded.')\n",
+    "json.dump(result, open('it_wiki_articles.json', 'w'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "del file, result\n",
+    "! rm -r wikiextractor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process the articles using corenlp "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: pip in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (19.1.1)\n",
+      "Requirement already up-to-date: pycorenlp in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (0.3.0)\n",
+      "Requirement already satisfied, skipping upgrade: requests in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (from pycorenlp) (2.20.1)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3<1.25,>=1.21.1 in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (from requests->pycorenlp) (1.24.1)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (from requests->pycorenlp) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<2.8,>=2.5 in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (from requests->pycorenlp) (2.7)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /root/.pyenv/versions/3.6.7/lib/python3.6/site-packages (from requests->pycorenlp) (2018.11.29)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pip install -U pip pycorenlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pycorenlp import StanfordCoreNLP\n",
+    "\n",
+    "container = 'http://hostname:9000'\n",
+    "nlp = StanfordCoreNLP(container)\n",
+    "nlp_properties = {\n",
+    "  'annotators': 'tokenize,ssplit,tokenize,ssplit,pos,depparse,natlog,openie,ner',\n",
+    "  'outputFormat': 'json'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "broken_ids = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘corenlp_annotations_new’: File exists\r\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a54cbd1edc043d587d19cc254bef33d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=13145), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "import json\n",
     "from tqdm import tqdm_notebook as tqdm\n",
     "\n",
     "file = json.load(open('it_wiki_articles.json', 'r'))\n",
-    "broken_ids = []\n",
+    "\n",
     "! mkdir corenlp_annotations\n",
     "\n",
     "new_file = []\n",
     "filename_base = 'corenlp_annotations/it_wiki'\n",
-    "counter_0, counter_1 = 1, 0\n",
-    "save_every = 300\n",
+    "counter_0, counter_1 = 1, 2\n",
+    "save_every = 100\n",
     "\n",
-    "for line in tqdm(file):\n",
+    "for line in tqdm(file[136:]):\n",
     "    id, text, name, url = line\n",
-    "    if id not in remove_ids:\n",
-    "        result = nlp.annotate(strip_tags(text), properties=nlp_properties)\n",
+    "    if id not in broken_ids:\n",
+    "        try:\n",
+    "            result = nlp.annotate(text, properties=nlp_properties)\n",
+    "        except Exception:\n",
+    "            import time\n",
+    "            time.sleep(10)  # wait until container surely restarts after OOM\n",
+    "            result = nlp.annotate(text, properties=nlp_properties)\n",
+    "        \n",
     "        if type(result) == str:\n",
-    "            broken_ids.append(id)  # in case of an error, corenlp returns a string\n",
+    "            broken_ids.append(id)  # in case of an internal error, corenlp returns a string\n",
     "            continue\n",
     "            \n",
     "        result['id'] = id\n",
-    "        result['text'] = text\n",
     "        new_file.append(result)\n",
     "\n",
     "        if not counter_0 % save_every:\n",
@@ -384,71 +440,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "counter = 0\n",
     "\n",
     "def filter_ner(sentence):\n",
-    "    entitymentions = []\n",
     "    openie = []\n",
     "    global counter\n",
     "    \n",
-    "    for entity in sentence['entitymentions']:\n",
-    "        for triplet in sentence['openie']:\n",
+    "    for triplet in sentence['openie']:\n",
+    "        for entity in sentence['entitymentions']:\n",
     "            if entity['text'] in [triplet['subject'], triplet['object']]:\n",
     "                openie.append(triplet)\n",
-    "                entitymentions.append(entity)\n",
     "                counter += 1\n",
+    "                continue\n",
     "                \n",
-    "    return entitymentions, openie\n",
+    "    return openie\n",
+    "\n",
+    "def filter_ner_both(sentence):\n",
+    "    openie = []\n",
+    "    global counter\n",
+    "    \n",
+    "    for triplet in sentence['openie']:\n",
+    "        for entity1 in sentence['entitymentions']:\n",
+    "            if entity1['text'] in triplet['subject']:\n",
+    "                for entity2 in sentence['entitymentions']:\n",
+    "                    if entity2['text'] in triplet['object']:\n",
+    "                        openie.append(triplet)\n",
+    "                        counter += 1\n",
+    "            elif entity1['text'] in triplet['object']:\n",
+    "                for entity2 in sentence['entitymentions']:\n",
+    "                    if entity2['text'] in triplet['subject']:\n",
+    "                        openie.append(triplet)\n",
+    "                        counter += 1\n",
+    "\n",
+    "    return openie\n",
     "\n",
     "def process_page(page):\n",
     "    sentences = []\n",
     "    for sentence in page:\n",
     "        new_sentence = sentence\n",
-    "        new_sentence['entitymentions'], new_sentence['openie'] = filter_ner(sentence)\n",
-    "        if new_sentence['entitymentions']:\n",
+    "        new_sentence['openie'] = filter_ner_both(sentence)\n",
+    "        if new_sentence['openie']:\n",
     "            sentences.append(new_sentence)\n",
     "    return sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d31051a880c04977b408efb56dde2343",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=132), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1555299 triplets were extracted applying NER filtering\n"
+     ]
+    }
+   ],
    "source": [
     "from glob import glob\n",
     "from tqdm.autonotebook import tqdm\n",
     "import pandas as pd\n",
     "\n",
-    "result = []\n",
+    "data_path = 'corenlp_annotations_new'\n",
+    "result_path = 'corenlp_annotations_ner_pairs'\n",
+    "! mkdir $result_path\n",
     "\n",
-    "for file in tqdm(glob('corenlp_annotations/*.json')):\n",
+    "for file in tqdm(glob(data_path + '/*.json')):\n",
     "    tmp = pd.read_json(file)\n",
     "    tmp.sentences = tmp.sentences.map(process_page)\n",
-    "    result.append(tmp)\n",
+    "    tmp.to_json(file.replace(data_path, result_path), orient='values')\n",
     "    \n",
     "print(counter, 'triplets were extracted applying NER filtering')\n",
-    "result = pd.concat(result).sort_values('id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "directory = 'filtered_annotations'\n",
-    "! mkdir $directory\n",
-    "result = np.array_split(tmp, 4)\n",
-    "for i in range(len(result)):\n",
-    "    result[i].to_json(f'{directory}/it_wiki_annots_filtered_part_{i}.json', orient='records')\n",
-    "! echo contains only triplets with named entities \\($counter triplets\\) > filtered_annotations/readme.txt"
+    "! echo contains only triplets with named entities in object and subject \\($counter triplets\\) > $result_path/readme.txt"
    ]
   }
  ],
