data filtering & new models

--- a/data/prepare_wiki_dataset.ipynb
+++ b/data/prepare_wiki_dataset.ipynb
@@ -793,9 +793,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 649,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 649,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "broken_ids"
    ]
@@ -833,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 672,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,9 +877,9 @@
     "    global counter\n",
     "    \n",
     "    for triplet in sentence['openie']:\n",
-    "        if len(triplet['subject'].split()) <= FILTER_BY_LENGTH \\\n",
-    "            and len(triplet['object'].split()) <= FILTER_BY_LENGTH \\\n",
-    "            and len(triplet['relation'].split()) <= FILTER_BY_LENGTH:\n",
+    "        if triplet['subjectSpan'][1] - triplet['subjectSpan'][0] <= FILTER_BY_LENGTH \\\n",
+    "            and triplet['relationSpan'][1] - triplet['relationSpan'][0] <= FILTER_BY_LENGTH \\\n",
+    "            and triplet['objectSpan'][1] - triplet['objectSpan'][0] <= FILTER_BY_LENGTH:\n",
     "            for entity1 in sentence['entitymentions']:\n",
     "                if entity1['text'] in triplet['subject']:\n",
     "                    for entity2 in sentence['entitymentions']:\n",
@@ -897,11 +908,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 678,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘corenlp_annotations_ner_pairs’: File exists\r\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "182d0a1c96ae4ce8a03bcfd5c957be47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=92), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75335 triplets were extracted applying NER filtering\n"
+     ]
+    }
+   ],
    "source": [
     "from glob import glob\n",
     "from tqdm.autonotebook import tqdm\n",
@@ -911,7 +951,122 @@
     "result_path = 'corenlp_annotations_ner_pairs'\n",
     "! mkdir $result_path\n",
     "\n",
-    "for file in tqdm(glob(data_path + '/*.json')[:1]):\n",
+    "for file in tqdm(glob(data_path + '/*.json')):\n",
+    "    tmp = pd.read_json(file)\n",
+    "    tmp.sentences = tmp.sentences.map(process_page)\n",
+    "    tmp.to_json(file.replace(data_path, result_path), orient='values')\n",
+    "    \n",
+    "print(counter, 'triplets were extracted applying NER filtering')\n",
+    "! echo contains only triplets with named entities in object and subject \\($counter triplets\\) > $result_path/readme.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Leave only named entities on both ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 693,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILTER_BY_LENGTH = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 697,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = 0\n",
+    "\n",
+    "def filter_ner(sentence):\n",
+    "    openie = []\n",
+    "    global counter\n",
+    "    \n",
+    "    for triplet in sentence['openie']:\n",
+    "        for entity in sentence['entitymentions']:\n",
+    "            if entity['text'] in [triplet['subject'], triplet['object']]:\n",
+    "                openie.append(triplet)\n",
+    "                counter += 1\n",
+    "                continue\n",
+    "                \n",
+    "    return openie\n",
+    "\n",
+    "def filter_ner_both(sentence):\n",
+    "    openie = []\n",
+    "    global counter\n",
+    "    \n",
+    "    for triplet in sentence['openie']:\n",
+    "        if triplet['subjectSpan'][1] - triplet['subjectSpan'][0] <= FILTER_BY_LENGTH \\\n",
+    "            and triplet['relationSpan'][1] - triplet['relationSpan'][0] <= FILTER_BY_LENGTH + 10 \\\n",
+    "            and triplet['objectSpan'][1] - triplet['objectSpan'][0] <= FILTER_BY_LENGTH:\n",
+    "            \n",
+    "            entitymentions = ' '.join([entity['text'] for entity in sentence['entitymentions']])\n",
+    "            if triplet['subject'] in ' '.join(entitymentions) and triplet['object'] in entitymentions:\n",
+    "                openie.append(triplet)\n",
+    "                counter += 1\n",
+    "\n",
+    "    return openie\n",
+    "\n",
+    "def process_page(page):\n",
+    "    sentences = []\n",
+    "    for sentence in page:\n",
+    "        new_sentence = sentence\n",
+    "        new_sentence['openie'] = filter_ner_both(sentence)\n",
+    "        if new_sentence['openie']:\n",
+    "            sentences.append(new_sentence)\n",
+    "    return sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 698,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘corenlp_annotations_only_ner’: File exists\r\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9accf7acb4f44aee8a8c025642ef661b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=92), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45949 triplets were extracted applying NER filtering\n"
+     ]
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "from tqdm.autonotebook import tqdm\n",
+    "import pandas as pd\n",
+    "\n",
+    "data_path = 'corenlp_annotations'\n",
+    "result_path = 'corenlp_annotations_only_ner'\n",
+    "! mkdir $result_path\n",
+    "\n",
+    "for file in tqdm(glob(data_path + '/*.json')):\n",
     "    tmp = pd.read_json(file)\n",
     "    tmp.sentences = tmp.sentences.map(process_page)\n",
     "    tmp.to_json(file.replace(data_path, result_path), orient='values')\n",
@@ -922,13 +1077,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 707,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'subject': 'He',\n",
+       "  'subjectSpan': [0, 1],\n",
+       "  'relation': 'is professor at',\n",
+       "  'relationSpan': [1, 4],\n",
+       "  'object': 'University of California',\n",
+       "  'objectSpan': [11, 14]},\n",
+       " {'subject': 'He',\n",
+       "  'subjectSpan': [0, 1],\n",
+       "  'relation': 'is professor at',\n",
+       "  'relationSpan': [1, 4],\n",
+       "  'object': 'University',\n",
+       "  'objectSpan': [11, 12]},\n",
+       " {'subject': 'He',\n",
+       "  'subjectSpan': [0, 1],\n",
+       "  'relation': 'is professor at',\n",
+       "  'relationSpan': [1, 4],\n",
+       "  'object': 'Berkeley',\n",
+       "  'objectSpan': [15, 16]},\n",
+       " {'subject': 'He',\n",
+       "  'subjectSpan': [0, 1],\n",
+       "  'relation': 'is',\n",
+       "  'relationSpan': [1, 2],\n",
+       "  'object': 'professor',\n",
+       "  'objectSpan': [3, 4]}]"
+      ]
+     },
+     "execution_count": 707,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tmp['sentences'][0][3]['openie']"
+    "tmp[\"sentences\"].iloc[4][1][\"openie\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 709,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'docTokenBegin': 19,\n",
+       "  'docTokenEnd': 20,\n",
+       "  'tokenBegin': 3,\n",
+       "  'tokenEnd': 4,\n",
+       "  'text': 'professor',\n",
+       "  'characterOffsetBegin': 90,\n",
+       "  'characterOffsetEnd': 99,\n",
+       "  'ner': 'TITLE'},\n",
+       " {'docTokenBegin': 27,\n",
+       "  'docTokenEnd': 32,\n",
+       "  'tokenBegin': 11,\n",
+       "  'tokenEnd': 16,\n",
+       "  'text': 'University of California, Berkeley',\n",
+       "  'characterOffsetBegin': 141,\n",
+       "  'characterOffsetEnd': 175,\n",
+       "  'ner': 'ORGANIZATION'},\n",
+       " {'docTokenBegin': 16,\n",
+       "  'docTokenEnd': 17,\n",
+       "  'tokenBegin': 0,\n",
+       "  'tokenEnd': 1,\n",
+       "  'text': 'He',\n",
+       "  'characterOffsetBegin': 82,\n",
+       "  'characterOffsetEnd': 84,\n",
+       "  'ner': 'PERSON'}]"
+      ]
+     },
+     "execution_count": 709,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp[\"sentences\"].iloc[4][1][\"entitymentions\"]"
    ]
   }
  ],
