--- a/extract_features.ipynb
+++ b/extract_features.ipynb
@@ -495,7 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "features = pd.read_pickle('data/dataset_ner.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,42 +517,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans(algorithm='auto', copy_x=True, init='k-means++', max_iter=300,\n",
+       "       n_clusters=100, n_init=10, n_jobs=None, precompute_distances='auto',\n",
+       "       random_state=None, tol=0.0001, verbose=0)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "kmeans=KMeans(n_clusters=19)\n",
+    "kmeans=KMeans(n_clusters=100)\n",
     "kmeans.fit(X.drop(columns=embedding_cols+excluding_cols))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_cluster_sample(number):\n",
-    "    return X[kmeans.labels_ == number][['docid', 'subject', 'relation', 'object']].sample(frac=1)#.iloc[:10]"
+    "    return X[kmeans.labels_ == number][['subject', 'relation', 'object']].sample(frac=1).iloc[:20].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Ontario Telepresence Project', 'Located at',\n",
+       "        'University of Toronto'],\n",
+       "       ['W. Ford Doolittle', 'However argued in', 'early 1980s'],\n",
+       "       ['New York Times', 'is In', 'late November 2005'],\n",
+       "       ['Ryan Cooper', 'Writing in', 'Week'],\n",
+       "       ['Nakamura', 'Born in', 'Japan'],\n",
+       "       ['ACTA', 'is In', 'early 2012 Denis'],\n",
+       "       ['Basilidians', 'taught According to', 'Clement'],\n",
+       "       ['Manning', 'serving in', 'Iraq'],\n",
+       "       ['James P. Hanigan', 'Writing in', 'America'],\n",
+       "       ['Apple', 'later announced on', 'July 17'],\n",
+       "       ['ENTITY', 'Founded in', '2016'],\n",
+       "       ['Ohmae', 'Born in', 'Kitakyūshū'],\n",
+       "       ['Horstman', 'living with', 'Portuguese'],\n",
+       "       ['first U.S. president', 'is In', '1965'],\n",
+       "       ['it', 'Aggregating', 'Metacritic'],\n",
+       "       ['Ladopoulos', 'Later worked as', 'consultant'],\n",
+       "       ['Tesla', 'Named after', 'engineer Nikola Tesla'],\n",
+       "       ['Rintaro', 'Returning to', 'past'],\n",
+       "       ['Pokémon Masters', 'Developed by', 'DeNA'],\n",
+       "       ['journalist Ben Hammersley', 'Writing for', 'Guardian']],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_cluster_sample(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
