Refactoring + Added new triplets into db

--- a/qa_data_preprocessing.ipynb
+++ b/qa_data_preprocessing.ipynb
@@ -846,9 +846,9 @@
     "    def predict(self, input_dict):\n",
     "        \n",
     "        credentials = {\n",
-    "            'host': 'bolt://openie.gpu.computer:7687',\n",
-    "            'username': 'neo4j',\n",
-    "            'password': 'openinfoextract'\n",
+    "            'host': '####',\n",
+    "            'username': '####',\n",
+    "            'password': '####'\n",
     "        }\n",
     "        \n",
     "        ner = SequenceTagger.load('ner')\n",
