--- a/qa_test_service.ipynb
+++ b/qa_test_service.ipynb
@@ -14,7 +14,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -147,22 +150,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./\r\n",
-      "./setup.py\r\n",
-      "./Dockerfile\r\n",
-      "./bentoml.yml\r\n",
-      "./MANIFEST.in\r\n",
-      "./requirements.txt\r\n",
-      "./README.md\r\n",
-      "./Dockerfile-sagemaker\r\n",
-      "./environment.yml\r\n",
-      "./QAService/\r\n",
-      "./QAService/bentoml.yml\r\n",
-      "./QAService/qa_service.py\r\n",
-      "./QAService/__init__.py\r\n",
-      "./QAService/artifacts/\r\n",
-      "./QAService/artifacts/__init__.py\r\n",
-      "./QAService/artifacts/relations.txt\r\n"
+      "./\n",
+      "./setup.py\n",
+      "./Dockerfile\n",
+      "./bentoml.yml\n",
+      "./MANIFEST.in\n",
+      "./requirements.txt\n",
+      "./README.md\n",
+      "./Dockerfile-sagemaker\n",
+      "./environment.yml\n",
+      "./QAService/\n",
+      "./QAService/bentoml.yml\n",
+      "./QAService/qa_service.py\n",
+      "./QAService/__init__.py\n",
+      "./QAService/artifacts/\n",
+      "./QAService/artifacts/__init__.py\n",
+      "./QAService/artifacts/relations.txt\n"
      ]
     }
    ],
@@ -198,5 +201,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
