Recent changes to link with issue at bentoml repo

--- a/qa_test_service.ipynb
+++ b/qa_test_service.ipynb
@@ -6,50 +6,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"relations.txt\", 'r', encoding='utf-8') as f:\n",
+    "with open(\"rels_new.txt\", 'r', encoding='utf-8') as f:\n",
     "    txt = f.read()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/usr/local/lib/python3.7/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "I1013 15:58:10.868773 139759801628480 file_utils.py:39] PyTorch version 1.2.0 available.\n",
-      "I1013 15:58:10.883059 139759801628480 modeling_xlnet.py:194] Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n"
+      "I1111 13:28:57.842325 140643822171968 file_utils.py:32] TensorFlow version 2.0.0-dev20190814 available.\n",
+      "I1111 13:28:57.843322 140643822171968 file_utils.py:39] PyTorch version 1.3.0 available.\n",
+      "I1111 13:28:57.859049 140643822171968 modeling_xlnet.py:194] Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n"
      ]
     }
    ],
@@ -68,34 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-10-13 15:58:49,398 loading file /root/.flair/models/en-ner-conll03-v0.4.pt\n"
+      "2019-11-11 13:29:01,347 loading file /root/.flair/models/en-ner-conll03-v0.4.pt\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'[{\"object\":\"Larry Page\",\"relation\":\"heads\",\"subject\":\"Sundar Pichai\"},{\"object\":\"CEO\",\"relation\":\"heads\",\"subject\":\"Sundar Pichai\"},{\"object\":\"Google\",\"relation\":\"ceo_at\",\"subject\":\"Sundar Pichai\"}]'"
+       "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "service.predict({'question': \"Where Sundar Pichai is CEO at ?\"})"
+    "service.predict({'question': \"Bill Gates\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +88,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "!mv qa_service_dir/ qa_service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2019-11-11 13:29:08,175] WARNING - Overriding default repository path to 'qa_service/'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I1111 13:29:08.230929 140643822171968 migration.py:154] Context impl SQLiteImpl.\n",
+      "I1111 13:29:08.231879 140643822171968 migration.py:161] Will assume non-transactional DDL.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2019-11-11 13:29:18,473] INFO - Successfully saved Bento 'QAService:20191111132908_E71721' to path: qa_service/QAService/20191111132908_E71721\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'qa_service/QAService/20191111132908_E71721'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "service.save(\"qa_service/\")"
    ]
   },
   {
@@ -120,57 +146,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2019-10-13 15:59:08,467] INFO - Searching for dependant modules of qa_service:/root/unsupervised_openie/qa_service.py\n",
-      "[2019-10-13 15:59:25,664] INFO - Copying local python module '/root/unsupervised_openie/qa_service.py'\n",
-      "[2019-10-13 15:59:25,665] INFO - Done copying local python dependant modules\n",
-      "[2019-10-13 15:59:25,792] INFO - BentoService QAService:2019_10_13_88a5538f saved to qa_service/QAService/2019_10_13_88a5538f\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'qa_service/QAService/2019_10_13_88a5538f'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "service.save(\"qa_service/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./\n",
-      "./setup.py\n",
-      "./Dockerfile\n",
-      "./bentoml.yml\n",
-      "./MANIFEST.in\n",
-      "./requirements.txt\n",
-      "./README.md\n",
-      "./Dockerfile-sagemaker\n",
-      "./environment.yml\n",
-      "./QAService/\n",
-      "./QAService/bentoml.yml\n",
-      "./QAService/qa_service.py\n",
-      "./QAService/__init__.py\n",
-      "./QAService/artifacts/\n",
-      "./QAService/artifacts/__init__.py\n",
-      "./QAService/artifacts/relations.txt\n"
+      "./\r\n",
+      "./Dockerfile\r\n",
+      "./Dockerfile-sagemaker\r\n",
+      "./QAService/\r\n",
+      "./QAService/artifacts/\r\n",
+      "./QAService/artifacts/relations.txt\r\n",
+      "./QAService/artifacts/__init__.py\r\n",
+      "./QAService/qa_service.py\r\n",
+      "./QAService/bentoml.yml\r\n",
+      "./QAService/__init__.py\r\n",
+      "./bentoml_init.sh\r\n",
+      "./bentoml.yml\r\n",
+      "./requirements.txt\r\n",
+      "./setup.py\r\n",
+      "./MANIFEST.in\r\n",
+      "./README.md\r\n",
+      "./environment.yml\r\n"
      ]
     }
    ],
    "source": [
-    "!cd ./qa_service/QAService/2019_10_13_88a5538f && tar cvzf ../qa_service.tar.gz ./"
+    "!cd ./qa_service/QAService/20191111132908_E71721/ && tar cvzf ../qa_service.tar.gz ./"
    ]
   },
   {
@@ -197,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
