--- a/qa_test_service.ipynb
+++ b/qa_test_service.ipynb
@@ -12,6 +12,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"rels_new.txt\", 'r') as f:\n",
+    "    rels = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['merged with',\n",
+       " 'merged In',\n",
+       " 'merged in',\n",
+       " 'merged On',\n",
+       " 'merged',\n",
+       " 'was merged in',\n",
+       " 'merged into',\n",
+       " 'was merged In',\n",
+       " 'be merged into',\n",
+       " 'has merged with',\n",
+       " 'merged Taito into',\n",
+       " 'officially merged',\n",
+       " 'was merged with',\n",
+       " 'merged Between',\n",
+       " 'However merged in',\n",
+       " 'was merged into',\n",
+       " 'had merged in']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x for x in rels['where_aducated'] if \"merged\" in x]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -31,9 +86,9 @@
       "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
       "/usr/local/lib/python3.6/dist-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "I1111 13:28:57.842325 140643822171968 file_utils.py:32] TensorFlow version 2.0.0-dev20190814 available.\n",
-      "I1111 13:28:57.843322 140643822171968 file_utils.py:39] PyTorch version 1.3.0 available.\n",
-      "I1111 13:28:57.859049 140643822171968 modeling_xlnet.py:194] Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n"
+      "I1113 12:46:35.288740 140231592736576 file_utils.py:32] TensorFlow version 2.0.0-dev20190814 available.\n",
+      "I1113 12:46:35.289656 140231592736576 file_utils.py:39] PyTorch version 1.3.0 available.\n",
+      "I1113 12:46:35.305792 140231592736576 modeling_xlnet.py:194] Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n"
      ]
     }
    ],
@@ -59,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-11-11 13:29:01,347 loading file /root/.flair/models/en-ner-conll03-v0.4.pt\n"
+      "2019-11-13 12:46:40,497 loading file /root/.flair/models/en-ner-conll03-v0.4.pt\n"
      ]
     },
     {
@@ -104,28 +159,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2019-11-11 13:29:08,175] WARNING - Overriding default repository path to 'qa_service/'\n"
+      "[2019-11-13 12:48:20,959] WARNING - Overriding default repository path to 'qa_service/'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I1111 13:29:08.230929 140643822171968 migration.py:154] Context impl SQLiteImpl.\n",
-      "I1111 13:29:08.231879 140643822171968 migration.py:161] Will assume non-transactional DDL.\n"
+      "I1113 12:48:21.013878 140231592736576 migration.py:154] Context impl SQLiteImpl.\n",
+      "I1113 12:48:21.014954 140231592736576 migration.py:161] Will assume non-transactional DDL.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2019-11-11 13:29:18,473] INFO - Successfully saved Bento 'QAService:20191111132908_E71721' to path: qa_service/QAService/20191111132908_E71721\n"
+      "[2019-11-13 12:48:31,201] INFO - Successfully saved Bento 'QAService:20191113124821_585CE9' to path: qa_service/QAService/20191113124821_585CE9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'qa_service/QAService/20191111132908_E71721'"
+       "'qa_service/QAService/20191113124821_585CE9'"
       ]
      },
      "execution_count": 7,
@@ -139,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +222,7 @@
     }
    ],
    "source": [
-    "!cd ./qa_service/QAService/20191111132908_E71721/ && tar cvzf ../qa_service.tar.gz ./"
+    "!cd ./qa_service/QAService/20191113124821_585CE9/ && tar cvzf ../qa_service.tar.gz ./"
    ]
   },
   {
